[gd_scene load_steps=8 format=2]

[ext_resource path="res://Models/Sword.dae" type="PackedScene" id=1]
[ext_resource path="res://CameraOrbit.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.5

[sub_resource type="Animation" id=3]
resource_name = "attack"
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.2, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -30, 0, 0 ), Vector3( 60, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 2 )

[node name="CameraOrbit" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="CameraOrbit"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -1, 1, -5 )
current = true

[node name="WeaponHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.58, 1, 0.035 )

[node name="Sword" parent="WeaponHolder" instance=ExtResource( 1 )]
transform = Transform( -1.72803e-08, 1.72803e-08, 0.15, 0.106066, 0.106066, 0, -0.106066, 0.106066, -2.44381e-08, 0, 0, 0 )

[node name="SwordAnimator" type="AnimationPlayer" parent="WeaponHolder"]
anims/attack = SubResource( 3 )

[node name="AttackRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1, 0.6 )
enabled = true
cast_to = Vector3( 0, 0, 1.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 5.16943
margin_top = 2.58472
margin_right = 5.16943
margin_bottom = 2.58472

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 457.0
margin_right = 194.0
margin_bottom = 471.0
__meta__ = {
"_edit_use_anchors_": false
}
